replace shell with guardian shell