@@ -1,17 +1,70 @@
-name := """zuora-export-poc"""
-organization := "com.gu"
-
-version := "1.0-SNAPSHOT"
-
-lazy val root = (project in file(".")).enablePlugins(PlayScala)
+name := "zuora-exporter"
+description:= "run zuora export/fulfilment ojob on an instance"
 
 scalaVersion := "2.11.8"
+organization := "com.gu"
 
-libraryDependencies += filters
-libraryDependencies += "org.scalatestplus.play" %% "scalatestplus-play" % "2.0.0" % Test
+scalacOptions ++= Seq(
+  "-deprecation",
+  "-encoding", "UTF-8",
+  "-feature",
+  "-target:jvm-1.8",
+  "-language:existentials",
+  "-language:higherKinds",
+  "-language:implicitConversions",
+  "-unchecked",
+  "-Xfatal-warnings",
+  "-Xlint",
+  "-Yno-adapted-args",
+  "-Ywarn-dead-code",
+  "-Ywarn-numeric-widen",
+  "-Ywarn-value-discard",
+  "-Xfuture"
+)
 
-// Adds additional packages into Twirl
-//TwirlKeys.templateImports += "com.gu.controllers._"
+scalacOptions in doc in Compile := Nil
 
-// Adds additional packages into conf/routes
-// play.sbt.routes.RoutesKeys.routesImport += "com.gu.binders._"
+enablePlugins(PlayScala, RiffRaffArtifact, JDebPackaging)
+
+mappings in Universal ++= (baseDirectory.value / "resources" *** ).get pair relativeTo(baseDirectory.value)
+
+riffRaffPackageType := (packageBin in Debian).value
+riffRaffUploadArtifactBucket := Option("riffraff-artifact")
+riffRaffUploadManifestBucket := Option("riffraff-builds")
+riffRaffManifestProjectName := "fulfilment"
+
+resolvers += "Sonatype releases" at "https://oss.sonatype.org/content/repositories/releases"
+
+libraryDependencies ++= Seq(
+  ws,
+  "com.gu" %% "play-googleauth" % "0.6.0",
+  "org.scalatest" %% "scalatest" % "3.0.1" % "test",
+  "org.scalatestplus.play" %% "scalatestplus-play" % "2.0.0" % Test
+)
+
+routesGenerator := InjectedRoutesGenerator
+
+import com.typesafe.sbt.packager.archetypes.ServerLoader.Systemd
+serverLoading in Debian := Systemd
+
+debianPackageDependencies := Seq("openjdk-8-jre-headless")
+maintainer := "Guardian Developers <dig.dev.software@theguardian.com>"
+packageSummary := description.value
+packageDescription := description.value
+
+javaOptions in Universal ++= Seq(
+    "-Dpidfile.path=/dev/null",
+    "-J-XX:MaxRAMFraction=2",
+    "-J-XX:InitialRAMFraction=2",
+    "-J-XX:MaxMetaspaceSize=500m",
+    "-J-XX:+UseConcMarkSweepGC",
+    "-J-XX:+PrintGCDetails",
+    "-J-XX:+PrintGCDateStamps",
+    s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
+)
+
+initialize := {
+  val _ = initialize.value
+  assert(sys.props("java.specification.version") == "1.8",
+    "Java 8 is required for this project.")
+}
